--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,21 @@
 # Dependencies
 node_modules/
-*/node_modules/
-
-# Production builds
-client/build/
-server/dist/
+client/node_modules/
+server/node_modules/
+/.pnp
+.pnp.js
 
 # Testing
 coverage/
-*/coverage/
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Production
+build/
+dist/
+client/build/
 
 # Environment variables
 .env
@@ -17,6 +23,8 @@ coverage/
 .env.development.local
 .env.test.local
 .env.production.local
+server/.env
+client/.env
 
 # IDE
 .vscode/
@@ -24,13 +32,18 @@ coverage/
 *.swp
 *.swo
 *~
-
-# OS
 .DS_Store
-Thumbs.db
 
 # Misc
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.eslintcache
+*.pem
+.cache/
+.temp/
+tmp/
+
+# Logs
+logs/
+*.log
+
+# OS
+Thumbs.db
+.DS_Store
